# Imagenet

./: LOCAL_DATASET_USAGE.md  OPTIMIZED_MIXED_PRECISION.md  README.md  download_imagenet100.py  download_mini_imagenet.py  pyproject.toml  run_local_training.py  run_optimized_training.py  setup_ec2.sh  test_logging.py  test_sample_dataset.ipynb  test_subset1.ipynb  test_subset2.ipynb
fixres/: train.py
hugging_face_files/: README.md  app.py  model.py  requirements.txt
src/: main.py  main2.py  model.py  test.py  train.py
